src/objects/AU_Card_Details__c.object
<CustomObject>
    <fields>
        <fullName>AU_Card_Type__c</fullName>
        <label>Card Type (Control)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Driver &amp; Vehicle</fullName>
                </value>
                <value>
                    <fullName>Driver Only</fullName>
                </value>
                <value>
                    <fullName>Vehicle Only</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AU_Drivers_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the driver associated with the card.  Must be provided if no vehicle details provided.  This will be embossed on Line 2 on the card.</inlineHelpText>
        <label>Cardholder/Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AU_card_PIN_setting__c</fullName>
        <inlineHelpText>M        Mandatory
O        Optional
N        Not Permitted
B        Bulk PIN</inlineHelpText>
        <label>Card PIN setting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Card_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>M: Mandatory</fullName>
                </value>
                <value>
                    <fullName>O: Optional</fullName>
                </value>
                <value>
                    <fullName>N: Not Permitted</fullName>
                </value>
                <value>
                    <fullName>B: Bulk PIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AL: ALP</fullName>
                </value>
                <value>
                    <fullName>AO: APCO Service Station</fullName>
                </value>
                <value>
                    <fullName>AP: Australia Post</fullName>
                </value>
                <value>
                    <fullName>AR: Aspire Co_Brand</fullName>
                </value>
                <value>
                    <fullName>AT: AUTOPIA</fullName>
                </value>
                <value>
                    <fullName>B: BASE</fullName>
                </value>
                <value>
                    <fullName>BP: Fuel 1 BudgetPetrol</fullName>
                </value>
                <value>
                    <fullName>BW: Best Western Trade Card</fullName>
                </value>
                <value>
                    <fullName>C: APCO</fullName>
                </value>
                <value>
                    <fullName>CD: Fuel1 CDO</fullName>
                </value>
                <value>
                    <fullName>CF: Fuel 1 Carrison</fullName>
                </value>
                <value>
                    <fullName>CM: Coles Account Id Card</fullName>
                </value>
                <value>
                    <fullName>CP: Capricorn</fullName>
                </value>
                <value>
                    <fullName>CV: Orix Exxon Mobil CV Card</fullName>
                </value>
                <value>
                    <fullName>DB: Mobil Business Card</fullName>
                </value>
                <value>
                    <fullName>DF: Mobil Fleet Card</fullName>
                </value>
                <value>
                    <fullName>DG: Dib Group</fullName>
                </value>
                <value>
                    <fullName>EA: Exxon Mobil Card</fullName>
                </value>
                <value>
                    <fullName>EC: Electrical &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>EN: ENLIST</fullName>
                </value>
                <value>
                    <fullName>EP: RACV Salary Solution</fullName>
                </value>
                <value>
                    <fullName>FP: FLEETPLUS</fullName>
                </value>
                <value>
                    <fullName>G6: GOLD W.A.</fullName>
                </value>
                <value>
                    <fullName>G7: GOLD Tas.</fullName>
                </value>
                <value>
                    <fullName>GS: GreenShareCar</fullName>
                </value>
                <value>
                    <fullName>IT: IntelliTrac Motorpass</fullName>
                </value>
                <value>
                    <fullName>JG: Jim&apos;s Group</fullName>
                </value>
                <value>
                    <fullName>LE: LEASEPLUS</fullName>
                </value>
                <value>
                    <fullName>LG: Lowes Petroleum Gold</fullName>
                </value>
                <value>
                    <fullName>MCM: MERCHANT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Restriction_Groups__c</fullName>
        <description>AU business processes.
Sent to Genesis</description>
        <label>Product Restriction Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10: Leaded</fullName>
                </value>
                <value>
                    <fullName>20: Unleaded</fullName>
                </value>
                <value>
                    <fullName>30: Premium Unleaded</fullName>
                </value>
                <value>
                    <fullName>40: Diesel</fullName>
                </value>
                <value>
                    <fullName>50: LPG</fullName>
                </value>
                <value>
                    <fullName>52: Ethanol PULP</fullName>
                </value>
                <value>
                    <fullName>53: Ethanol ULP</fullName>
                </value>
                <value>
                    <fullName>54: Low Aromatic Fuel</fullName>
                </value>
                <value>
                    <fullName>60: Oil</fullName>
                </value>
                <value>
                    <fullName>70: Car Wash</fullName>
                </value>
                <value>
                    <fullName>80: Insurance</fullName>
                </value>
                <value>
                    <fullName>90: Parking</fullName>
                </value>
                <value>
                    <fullName>120: Roadside Assistance</fullName>
                </value>
                <value>
                    <fullName>130: Service and Repairs</fullName>
                </value>
                <value>
                    <fullName>135: Tyres</fullName>
                </value>
                <value>
                    <fullName>140: Tolls</fullName>
                </value>
                <value>
                    <fullName>150: Accommodation</fullName>
                </value>
                <value>
                    <fullName>170: Car Rental</fullName>
                </value>
                <value>
                    <fullName>200: Shop</fullName>
                </value>
                <value>
                    <fullName>210: Taxi</fullName>
                </value>
                <value>
                    <fullName>220: Liquor</fullName>
                </value>
                <value>
                    <fullName>230:Food &amp; Beverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>AU_Fuel_Business</fullName>
        <active>true</active>
        <label>AU Fuel Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>AU_Trade</fullName>
        <active>true</active>
        <description>Use this record type for AU Trade Cards</description>
        <label>AU Trade</label>
    </recordTypes>
    <validationRules>
        <fullName>Best_Western_Accomodation_rule</fullName>
        <active>true</active>
        <description>Ensures that accomodation is selected as a product on all Best Western cards</description>
        <errorConditionFormula>AND(ISPICKVAL( Card_Type__c, &quot;BW: Best Western Trade Card&quot;),
NOT( INCLUDES( Product_Restriction_Groups__c , &quot;150: Accommodation&quot;) ))</errorConditionFormula>
        <errorDisplayField>Product_Restriction_Groups__c</errorDisplayField>
        <errorMessage>Accommodation must be selected for Best Western cards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Best_Western_Product_Rule</fullName>
        <active>true</active>
        <description>Checks that only Accommodation or Food are selected as products for Best Western cards</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Card_Type__c , &quot;BW: Best Western Trade Card&quot;) 
 ,
 or(
 INCLUDES(Product_Restriction_Groups__c,&quot;10: Leaded&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;20: Unleaded	&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;30: Premium Unleaded	&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;40: Diesel&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;50: LPG&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;52: Ethanol PULP&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;53: Ethanol ULP&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;54: Low Aromatic Fuel&quot;),
 INCLUDES(Product_Restriction_Groups__c,&quot;60: Oil&quot;),  
INCLUDES(Product_Restriction_Groups__c,&quot;70: Car Wash&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;80: Insurance&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;90: Parking&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;120: Roadside Assistance&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;130: Service and Repairs&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;135: Tyres&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;140: Tolls&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;170: Car Rental&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;200: Shop&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;210: Taxi&quot;),
INCLUDES(Product_Restriction_Groups__c,&quot;220: Liquor&quot;)
 )
 )</errorConditionFormula>
        <errorDisplayField>Product_Restriction_Groups__c</errorDisplayField>
        <errorMessage>Only Accommodation or Beverage products can be selected for Best Western cards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cardholder_Email</fullName>
        <active>true</active>
        <description>Error when Cardholders email&apos;s address is blank and card type control = Trade</description>
        <errorConditionFormula>AND
 (
 ISBLANK( AU_Card_Holder_email_address__c),
 ISPICKVAL(AU_Card_Type__c, &apos;Trade&apos;)
 )</errorConditionFormula>
        <errorMessage>Cardholder&apos;s email address must be completed for Trade cards</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cardholder_Phone</fullName>
        <active>true</active>
        <description>Error when cardholder&apos;s mobile phone number field is blank and card type (control) = Trade</description>
        <errorConditionFormula>and (
 ISPICKVAL( AU_Card_Type__c , &apos;Trade&apos;),
 isblank  ( AU_Cardholder_Mobile_Phone_Number__c )

)</errorConditionFormula>
        <errorMessage>Cardholder&apos;s mobile phone number must be completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Driver_Name_Required</fullName>
        <active>true</active>
        <description>It is an error if Card Type (Control) is either &quot;Driver &amp; Vehicle&quot; , &quot;Driver Only&quot; or &quot;Trade&quot;
AND Driver Name is empty</description>
        <errorConditionFormula>AND(
 ISBLANK(AU_Drivers_Name__c),
 OR(
  ISPICKVAL(AU_Card_Type__c, &apos;Driver Only&apos;),
  ISPICKVAL(AU_Card_Type__c, &apos;Driver &amp; Vehicle&apos;),
  ISPICKVAL(AU_Card_Type__c, &apos;Trade&apos;)
 )
)</errorConditionFormula>
        <errorDisplayField>AU_Drivers_Name__c</errorDisplayField>
        <errorMessage>Driver Name must be entered if Driver chosen in Card Type (Control)</errorMessage>
    </validationRules>
</CustomObject>